Both TextBundle changes and DirectoryEntry change. #36
This is a change to the API, so bumping minor version as well. 1.6.0!